--- a/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-09-00.tex
+++ b/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-09-00.tex
@@ -4,6 +4,5 @@
 \caption{Escenario - AD-09-00}
 \label{fig:AD-09-00}
 \end{figure}
-
-Descripcion escenario...
+Este es el escenario que se muestra luego de crear una venta a partir de uno o más presupuestos. Un click en el boton \textbf{AD-09-01} navegará al escenario \textbf{AD-12-00} para ver la venta recientemente creada. Un click en el botón \textbf{AD-09-02} cerrará la ventana y navegará al escenario \textbf{AD-03-00}.
 \clearpage
