--- a/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-31-00.tex
+++ b/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-31-00.tex
@@ -4,6 +4,8 @@
 \caption{Escenario - AD-31-00}
 \label{fig:AD-31-00}
 \end{figure}
-
-Descripcion escenario...
+Este escenario permite al usuario agregar un nuevo domicilio para un cliente.
+Con el botón \textbf{AD-31-01} se podrá cerrar la ventana y volver al escenario \textbf{AD-30-00}.
+El usuario deberá indicar en el campo \textbf{AD-31-02} la dirección del cliente, en el campo \textbf{AD-31-03} el código posta, seleccionar provincia de la lista desplegable \textbf{AD-31-04} y ciudad de la lista desplegable \textbf{AD-31-05}.
+Un click en el botón \textbf{AD-31-06} creará el domicilio asignandolo al cliente y navegará al escenario \textbf{AD-30-00}.
 \clearpage
