--- a/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-30-00.tex
+++ b/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-30-00.tex
@@ -4,6 +4,8 @@
 \caption{Escenario - AD-30-00}
 \label{fig:AD-30-00}
 \end{figure}
-
-Descripcion escenario...
+Este escenario muestra la información y acciones referidas a los domicilios de un cliente. 
+El botón \textbf{AD-30-01} permite navegar al escenario \textbf{AD-28-00} o \textbf{AD-02-00} según el click del usuario.
+El botón \textbf{AD-30-02} permite a los usuarios crear un nuevo domicilio para el cliente navegando al escenario \textbf{AD-31-00}.
+El campo \textbf{AD-30-03} muestra la información de los domicilios del cliente, como ser el domicilio, código postal, ciudad, provincia y país. El botón \textbf{AD-30-04} permite al usuario borrar un domicilio del cliente.
 \clearpage
