--- a/Informe Final/Documentacion.tex
+++ b/Informe Final/Documentacion.tex
@@ -6,6 +6,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
+\usepackage{fontawesome}
 \graphicspath{ {Imagenes/} }
 \DeclareGraphicsExtensions{.png,.jpg}
 \setlength{\parindent}{12pt}
